--- a/Language/VAJIRA.json
+++ b/Language/VAJIRA.json
@@ -11,9 +11,9 @@
             "UPDATED_LOCAL": "*සාර්ථකව යාවත්කාලීන කරන ලදී!*"
         }, 
         "global": {     
-            "botName": "Vajira-Md",
+            "botName": "ⒸⒽⒶⓉⒽⓊⓇⒶ-Md",
             "body": "whatsapp User Bot", 
-            "greet2" : "Thanks To Vajira Sir",
+            "greet2" : "Thanks To Chathu Sir",
             "pic1": "https://telegra.ph/file/09ab24679fb3a297a8905.jpg", 
             "pic2": "https://telegra.ph/file/09ab24679fb3a297a8905.jpg", 
             "pic3": "https://telegra.ph/file/09ab24679fb3a297a8905.jpg", 
@@ -22,20 +22,20 @@
             "pic6": "https://telegra.ph/file/09ab24679fb3a297a8905.jpg", 
             "pic7": "https://telegra.ph/file/09ab24679fb3a297a8905.jpg",
             "greet" : "Believe it",
-            "dotbody" : "I decided being Vajira King.",
+            "dotbody" : "I decided being Chathu King.",
             "emojii" : "🍑", 
-            "promote": "ඇඩ්මින් භූමිකාව වජිරට ලබා දී ඇත",
-            "pmallow": "*Hii,This is Vajira Tech Info\n අයාචිත තැපැල් යැවීම නිසා ඔබව අවහිර කර ඇත.\n\n _Powered by Vajira Tech Info_",
-            "pmwarn": "✋Hii* \nකරුණාකර අයාචිත තැපැල් කරන්න එපා වෙනත් අයාචිත තැපැල් යැවීම නිසා මම ඔබව අවහිර කරන්නම්. _You have ${checkPermit.times} warning(s)._\n\n Join Public Support Group : \nhttps://chat.whatsapp.com/BvNbfgOzzo77urGqoNjThk\n\n*Powered by Vajira_Md*",
-            "permited": "Hii Sir*\n\nදැන් ඔබට pm කිරීමට මගේ හිමිකරු අවසර දී ඇත.\n\n _Powered by Vajira Tech_", 
-            "revoked" : "*Hii Sir*\n\nඔබගේ pm අවසර අවසරය දැන් අවලංගු කර ඇත.\n\n _Powered by Vajira Tech_",
+            "promote": "ඇඩ්මින් භූමිකාව  ලබා දී ඇත",
+            "pmallow": "*Hii,This is ⒸⒽⒶⓉⒽⓊⓇⒶ Tech Info\n අයාචිත තැපැල් යැවීම නිසා ඔබව අවහිර කර ඇත.\n\n _Powered by Chathura Tech Info_",
+            "pmwarn": "✋Hii* \nකරුණාකර අයාචිත තැපැල් කරන්න එපා වෙනත් අයාචිත තැපැල් යැවීම නිසා මම ඔබව අවහිර කරන්නම්.\n\n*Powered by Chathura *",
+            "permited": "Hii Sir*\n\nදැන් ඔබට pm කිරීමට මගේ හිමිකරු අවසර දී ඇත.\n\n _Powered by Chathura Tech_", 
+            "revoked" : "*Hii Sir*\n\nඔබගේ pm අවසර අවසරය දැන් අවලංගු කර ඇත.\n\n _Powered by Chathura Tech_",
             "demote": "අහ්, පරිපාලක භූමිකාව ආපසු ලබා ගන්නා ලදී",
             "antlink": "Link Detected.\n*Good Bye Rouge pirate*",
-            "session": "\n*මෙය ඔබගේ session.json වේ, එය ආරක්ෂිතව තබා එය නිසි ලෙස ගබඩා කරන්න*\n_Now Upload This json file in Your Forked Repo_\n Connect your repo to Heroku and *Deploy Branch* and Bot will run for Always\n\n*Powered by Vajira_Md*",
+            "session": "\n*මෙය ඔබගේ session.json වේ, එය ආරක්ෂිතව තබා එය නිසි ලෙස ගබඩා කරන්න*\n_Now Upload This json file in Your Forked Repo_\n Connect your repo to Heroku and *Deploy Branch* and Bot will run for Always\n\n*Powered by Chathura*",
             "mention": " කරුණාකර මගේ හිමිකරු සඳහන් කරන්න",
-            "title": "Vajira-Md",
-            "footer": "ᴠᴀᴊɪʀᴀ ᴛᴇᴄʜ ɪɴғᴏ \n www.youtube.com/c/SuhailTechInfo",
-            "by": "Made by: Vajira Tech Info",
+            "title": "Chathura-Md",
+            "footer": "ᴠᴀᴊɪʀᴀ ᴛᴇᴄʜ ɪɴғᴏ \n https://wa.me/+94721732206?text=*status_ⒸⒽⒶⓉⒽⓊⓇⒶ_*",
+            "by": "Made by: chathura Tech Info",
             "chat_desc": "Options Avilable* : 1. mute\n2. unmute\n3. archive\n4. unarchive\n5. read\n6. unread\n7. delete",
             "success": "Done ✓",
             "dot": "හායි, ඔබ අදහස් කළේ *-help?*\n නිකන්.. මම රාමන් කනකොට මට කරදර කරන්න එපා",
